<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etSpace"
        android:layout_width="413dp"
        android:layout_height="82dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="1dp"
        android:background="#423E3E"
        android:backgroundTint="#423E3E"
        android:backgroundTintMode="add"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:text="@string/_Zero"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="358dp"
        android:layout_height="194dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/_7"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/_8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/_9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/Division"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/_4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/_5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/_6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/Multiply"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/_2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/_3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/Minus"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/c"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/_0"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/back"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#423E3E"
                android:text="@string/Plus"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>